--- a/v2  carrossel/style.css
+++ b/v2  carrossel/style.css
@@ -1,117 +1,319 @@
-.branco {
-    color: #fff;
+
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
 }
-
-
+.branco {
+  color: #fff;
+}
 .header {
-    background-color: #004aad;
-    padding: 15px;
-    text-align: right;
-  }
-
+  background-color: #004aad;
+  padding: 15px;
+  text-align: right;
+}
 
 h1 {
-    background-color: #004aad;
-    padding: 15px;
-    text-align: left;
-      }
+  background-color: #004aad;
+  padding: 15px;
+  text-align: left;
+    }
+
+
+    a {
+      text-decoration: none;
+      text-align: right;
+      font-weight: bold;
+      color: white;
+    }
+  
+    .post p {
+      margin: 10px 0px;
+    }
   
 
-  a {
-    text-decoration: none;
-    text-align: right;
-    font-weight: bold;
-    color: #004aad;
-  }
+    .menu,
+    .logo {
+      padding: 10px;
+    }
+    .menu a,
+    .menu a:visited {
+      color: white;
+      text-decoration: none;
+      padding: 8px 12px;
+    }
+    .menu a:hover {
+      background-color: white;
+      color: #004aad;
+    }
+  
 
-
-  .post p {
-    margin: 10px 0px;
+    .container {
+      width: 920px;
+      margin: 0 auto;
+      padding: 20px;
+    }
+  
+  .container {
+      padding: 2rem;
   }
   
 
-  .menu,
-  .logo {
-    padding: 10px;
-  }
-  .menu a,
-  .menu a:visited {
-    color: white;
-    text-decoration: none;
-    padding: 8px 12px;
-  }
-  .menu a:hover {
-    background-color: white;
-    color: #004aad;
-  }
-
-
-.container {
-    width: 920px;
-    margin: 0 auto;
-    padding: 20px;
-  }
-
-.container {
-    padding: 2rem;
-}
-
-
-.slider-wrapper {
+  .slider-wrapper {
     position: relative;
     max-width: 48rem;
     margin: 0 auto;
 }
 
 .slider {
-display: flex;
-aspect-ratio: 16/ 9;
-overflow-x: auto;
-scroll-snap-type: x mandatory;
-scroll-behavior: smooth;
-box-shadow: 0 1.5rem --0.75rem hsla(0, 0, 0, 0.25);
-border-radius: 0.5rem;
+  display: flex;
+  aspect-ratio: 16/ 9;
+  overflow-x: auto;
+  scroll-snap-type: x mandatory;
+  scroll-behavior: smooth;
+  box-shadow: 0 1.5rem --0.75rem hsla(0, 0, 0, 0.25);
+  border-radius: 0.5rem;
+  }
+  
+  .slider img {
+      flex: 1 0 100%;
+      scroll-snap-align: start;
+      object-fit: cover;
+  }
+  
+  .slider-nav {
+      display: flex;
+      column-gap: 1rem;
+      position: absolute;
+      bottom: 1.25rem;
+      left: 50%;
+      transform:translateX(-50%);
+      z-index: 1;
+  }
+  
+  .slider-nav a {
+  width: 0.5rem;
+  height: 0.5rem;
+  border-radius: 50%;
+  background-color: #fff;
+  opacity: 0.75;
+  transition: opacity ease 250ms;
+  }
+  
+  .slider-nav a:hover {
+     opacity: 1; 
+  }
+  
+
+  h3 {
+    padding: 15px;
+    text-align: left;
+  
+  }
+  
+
+
+  
+  
+
+  .post-comunidade{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      padding: 40px;
+      border-bottom:  1px solid;
+      text-align: center;
+      display: flex;
+    }
+ 
+
+   .post-comunidade h4{
+      padding: 20px;
+      text-align: left;
+      color: #004aad;
+      
+    }
+    .post-comunidade p{
+      padding: 10px;
+      text-align: left;
+      display: inline-block;
+      align-items: center;
+    
+    }
+
+    .post-comunidade img{
+      width: 500px;
+      border: px solid #004aad;
+      padding: 20px;
+
+    
+
+    }
+   .btn-link{
+    text-decoration: none;
+    border-radius: 3px;
+    width: 160px;
+    text-align: center;
+    padding: 20px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 16px;
+    background-color: black;
+    color: white;
+   }
+   .btn-link:hover{
+
+    box-shadow: 2px 2px 2px 2px #535252;
+
+   }
+
+
+    
+
+
+
+ul {
+  margin: 0px;
+  padding: 0px;
 }
 
-.slider img {
-    flex: 1 0 100%;
-    scroll-snap-align: start;
-    object-fit: cover;
+
+#blog {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 40px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0, 0.05);
 }
 
-.slider-nav {
-    display: flex;
-    column-gap: 1rem;
-    position: absolute;
-    bottom: 1.25rem;
-    left: 50%;
-    transform:translateX(-50%);
-    z-index: 1;
+.blog {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.blog span {
+  color: #004aad;;
 }
 
-.slider-nav a {
-width: 0.5rem;
-height: 0.5rem;
-border-radius: 50%;
-background-color: #fff;
-opacity: 0.75;
-transition: opacity ease 250ms;
+.blog h3 {
+  font-size: 2.4rem;
+  color: #004aad;;
+  font-weight: 600;
 }
 
-.slider-nav a:hover {
-   opacity: 1; 
+.blog-container {
+  display:flex;
+  justify-content:center;
+  align-items: center;
+  margin: 20px 0px;
+  flex-wrap: wrap;
 }
 
+.blog-box {
+  width: 350px;
+  background-color: black;
+  border: 1px solid #004aad;
+  margin: 20px;
+}
+
+.blog-img {
+  width: 100%;
+  height: auto;
+ 
+}
+
+.blog-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.blog-text {
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+}
+
+.blog-text span {
+  color: whitesmoke;
+  font-size: 0.9rem;
+}
+
+.blog-text .blog-title {
+  font-size: 1.3rem;
+  font-weight: 500;
+  color: white;
+}
+
+.blog-text .blog-title :hover {
+  color: red;
+  transition: all ease 0.3s;
+}
+
+.blog-text p {
+  color: white;
+  font-size: 0.9rem;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin: 20px 0px;
+}
+
+.blog-text a {
+  color:azure
+  
+}
+
+.blog-text a :hover {
+  color: red;
+  transition: all ease 0.3s;
+}
+
+@media (max-width: 1250px) {
+  .blog-box {
+    width: 300px;
+  }
+}
+@media (max-width: 1100px) {
+  .blog-box {
+    width: 70%;
+  }
+}
+@media (max-width: 550px) {
+  .blog-box {
+    margin: 20px 10px;
+    width: 100%;
+  }
+  #blog {
+    padding: 20px;
+  }
+}
+
+p {
+  text-align: left;
+
+}
 
 
 .footer {
+ 
     clear: both;
+    width: 200%;
     background-color: #004aad;
     padding: 15px;
     text-align: center;
+    
   }
   
   .footer p {
     color: white;
     text-align: center;
+    padding: 15px;
+   
   }
+
