--- a/SPRINT 2 HTML E CSS/paginal inicial/style.css
+++ b/SPRINT 2 HTML E CSS/paginal inicial/style.css
@@ -8,13 +8,13 @@
   color: #fff;
 }
 .header {
-  background-color: #004aad;
+  background-color: #013331;;
   padding: 15px;
   text-align: right;
 }
 
 h1 {
-  background-color: #004aad;
+  background-color:  #013331;;
   padding: 15px;
   text-align: left;
     }
@@ -44,7 +44,7 @@ h1 {
     }
     .menu a:hover {
       background-color: white;
-      color: #004aad;
+      color:  #013331;;
     }
   
 
@@ -131,7 +131,7 @@ h1 {
    .post-comunidade h4{
       padding: 20px;
       text-align: left;
-      color: #004aad;
+      color:  #013331;;
       
     }
     .post-comunidade p{
@@ -144,7 +144,7 @@ h1 {
 
     .post-comunidade img{
       width: 500px;
-      border: px solid #004aad;
+      border: px solid  #013331;;
       padding: 20px;
 
     
@@ -170,14 +170,6 @@ h1 {
 
     
 
-
-
-ul {
-  margin: 0px;
-  padding: 0px;
-}
-
-
 #blog {
   display: flex;
   justify-content: center;
@@ -194,12 +186,12 @@ ul {
   flex-direction: column;
 }
 .blog span {
-  color: #004aad;;
+  color:  #013331;;
 }
 
 .blog h3 {
   font-size: 2.4rem;
-  color: #004aad;;
+  color:  #013331;;
   font-weight: 600;
 }
 
@@ -214,7 +206,7 @@ ul {
 .blog-box {
   width: 350px;
   background-color: black;
-  border: 1px solid #004aad;
+  border: 1px solid  #013331;;
   margin: 20px;
 }
 
@@ -303,10 +295,11 @@ p {
 .footer {
  
     clear: both;
-    width: 200%;
-    background-color: #004aad;
+    width: 100%;
+    background-color:  #013331;;
     padding: 15px;
     text-align: center;
+    ;
     
   }
   
@@ -314,6 +307,7 @@ p {
     color: white;
     text-align: center;
     padding: 15px;
+
    
   }
 
