--- a/RELATÓRIOS E SPRINTS/SPRINT 2 HTML E CSS/comunidade/comunidade.css
+++ b/RELATÓRIOS E SPRINTS/SPRINT 2 HTML E CSS/comunidade/comunidade.css
@@ -1,7 +1,3 @@
-* {
-    box-sizing: border-box;
-}
-
 .branco {
     color: #fff;
   }
@@ -43,7 +39,32 @@
       .menu a:hover {
         background-color: white;
         color: #013331;
+    
       }
+  
+      .container img{
+        width: 1000px;
+        height: auto;
+        margin-bottom: 20px auto;
+       align-self: center;
+       display: -webkit-flex;
+       justify-content: center;
+       align-items: center;
+       
+    }
+
+
+body {
+    box-sizing: border-box;
+    font-size: 14px;
+    background: #e9e9e9;
+    font-family: system-ui;
+}
+
+
+* {
+    box-sizing: border-box;
+}
 
 body {
     padding: 0px;
@@ -73,15 +94,14 @@ a {
 }
 
 .content {
-    width: 90%;
+    width: 50%;
     margin: 30px auto;
-    border: 1px solid red;
+    border: 1px solid #005255;
 }
 
 .content .main-content {
-    width: 70%;
-    float: left;
-    border: 1px solid blue;
+    padding: 20px;
+    border: 1px solid #005255;
 }
 
 .clearfix::after {
@@ -111,7 +131,7 @@ a {
 
 .content .main-content .post .read-more:hover {
     background: #006669;
-    color: white !important;
+    color: #005255 !important;
     transition: .25s;
 }
 
@@ -138,14 +158,100 @@ a {
     height: 300px;
 }
 
+/* --------------------------------*/
+.comment-box,
+.post-comment .list {
+    background:#005255;
+    border-radius: 6px;
+    box-shadow: 0 2px 2px #0002;
+}
 
-p {
-    text-align: left;
-  
-  }
-  
-  .footer {
-  
+.comment-session {
+    width: 650px;
+    height: auto;
+    margin: 0 auto;
+}
+
+.post-comment .list {
+    width: 100%;
+    margin-bottom: 12px;
+}
+
+.post-comment .list .user {
+    display: flex;
+    padding: 8px;
+    overflow: hidden;
+}
+
+.post-comment .list .user img {
+    height: 38px;
+    width: 38px;
+    margin-right: 10px;
+    border-radius: 50%;
+}
+
+.comment-session .name {
+    text-transform: uppercase;
+    font-weight: 500;
+}
+
+.post-comment .list .day {
+    font-size: 12px
+}
+
+.post-comment .comment-post {
+    padding: 0 0 15px 58px;
+}
+
+.comment-box {
+    padding: 10px;
+    overflow: hidden;
+}
+
+.comment-box .user {
+    display: flex;
+    width: min-content;
+}
+
+.comment-box .image img {
+    width: 24px;
+    height: 24px;
+    margin-right: 10px;
+    border-radius: 50%;
+}
+
+.comment-box textarea {
+    background: #eee;
+    width: -webkit-fill-available;
+    height: 152px;
+    margin: 10px 0;
+    padding: 10px;
+    resize: inherit;
+    border-radius: 5px;
+    box-shadow: 0 0 0 1px #0003;
+}
+
+.comment-box textarea:focus-visible {
+    box-shadow: inset 0 0 0 1px #013331;
+    outline: none;
+}
+
+.comment-box .comment-submit {
+    float: right;
+    padding: 6px 10px;
+    border: none;
+    background: #013331;
+    color: #eee;
+    cursor: pointer;
+    border-radius: 3px;
+}
+
+.comment-box .comment-submit:hover {
+    background: #013331;
+}
+
+.footer {
+
     clear: both;
     width: 100%;
     background-color: #013331;
