--- a/RELATÓRIOS E SPRINTS/SPRINT 2 HTML E CSS/sobre/style.css
+++ b/RELATÓRIOS E SPRINTS/SPRINT 2 HTML E CSS/sobre/style.css
@@ -1,67 +1,78 @@
+@charset "UTF-8";
+
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+
 .branco {
-    color: #fff;
-  }
-  .header {
-    background-color: #013331;
-    padding: 15px;
-    text-align: right;
-  }
-  
-  h1 {
-    background-color: #013331;
-    padding: 15px;
-    text-align: left;
-      }
-      h2{
-        text-align: center;
-      }
-  
-  
-      a {
-        text-decoration: none;
-        text-align: right;
-        font-weight: bold;
-        color: white;
-      }
-    
-      .post p {
-        margin: 10px 0px;
-      }
-    
-  
-      .menu,
-      .logo {
-        padding: 10px;
-      }
-      .menu a,
-      .menu a:visited {
-        color: white;
-        text-decoration: none;
-        padding: 8px 12px;
-      }
-      .menu a:hover {
-        background-color: white;
-        color: #013331;
-      }
-  
-  
-  
-  
-  
-  
-      .footer {
-  
-    clear: both;
-    width: 100%;
-    background-color: #013331;
-    padding: 15px;
-    text-align: center;
-    
-  }
-  
-  .footer p {
-    color: white;
-    text-align: center;
-    padding: 15px;
-   
-  }
+  color: #fff;
+}
+.header {
+  background-color: #33283f;
+  padding: 20px;
+  text-align: right;
+}
+
+.logo {
+  margin: 0px;
+  position: absolute;
+  bottom: 68%;
+}
+header {
+  /*margin: 0px;*/
+}
+
+h1 {
+  margin-top: 0px;
+  margin-left: 20px;
+  border: 0px;
+  background-color: #180133;
+  padding: 2px;
+  text-align: left;
+}
+h2 {
+  text-align: center;
+}
+
+a {
+  text-decoration: none;
+  text-align: right;
+  font-weight: bold;
+  color: white;
+}
+
+.post p {
+  margin: 10px 0px;
+}
+
+.menu,
+.logo {
+  padding: 26px;
+  margin: 0px;
+  margin-left: -1%;
+}
+.menu a,
+.menu a:visited {
+  color: white;
+  text-decoration: none;
+  padding: 8px 12px;
+}
+.menu a:hover {
+  background-color: white;
+  color: #013331;
+}
+
+.footer {
+  clear: both;
+  width: 100%;
+  background-color: #013331;
+  padding: 15px;
+  text-align: center;
+}
+
+.footer p {
+  color: white;
+  text-align: center;
+  padding: 15px;
+}
