--- a/RELATÓRIOS E SPRINTS/SPRINT 2 HTML E CSS/sobre/style.css
+++ b/RELATÓRIOS E SPRINTS/SPRINT 2 HTML E CSS/sobre/style.css
@@ -31,7 +31,7 @@
 }
 
 h1 {
-  margin-top: 0px;
+  margin: 0px;
   margin-left: 20px;
   border: 0px;
   background-color: #33283f;
@@ -39,15 +39,20 @@ h1 {
   text-align: left;
 }
 
-div.text h2{
-  text-decoration: rgb(19, 19, 32);
-  margin-top: 10px;
-  margin-bottom: 0px;
-  text-indent: 2em;
-  text-align:justify;
-  font-size:  20px;
+div.text{
+  /*margin: 0px 10px;*/
+  text-indent: 2.5em;
 }
 
+div.text h2{
+  text-decoration: rgb(19, 19, 32);
+  margin: 10px 0px;
+  font-size: 20px;
+}
+/*p.ident {
+  text-indent: 5ch;
+  border: 0px;
+}*/
 span {
   color: rgb(75, 75, 173);
 }
@@ -57,16 +62,79 @@ section > h1 {
   text-align: center;
 }
 
-section#img-equipe {
+section > div#img-equipe {
   display: flex;
-  /*justify-content: center;*/
+  justify-content: center;
+  margin-top: 130px;
+  /*border-style: hidden;*/
+  border: 10vw;
   
  
 }
-
+#logo {
+  width: 1349px;
+}
 section#logo {
+  display: inline-block;
+  /*padding: 5px;*/
   background-image: url('./imagem_equipe/logomarca.jpeg');
+  height: 600px;
   background-repeat: no-repeat;
+  background-position: center;
+  background-color: #33283f;
+  /*background-size: cover;*/
+  background-attachment: fixed;
+}
+
+.foto-amauri {
+  border: 10px;
+  padding-right: 150px;
+}
+.foto-jeferson {
+  border: 10px;
+  padding-right: 150px;
+}
+.foto-joao {
+  border: 10px;
+}
+
+.descricao {
+  display: flex;
+  justify-content: space-between;
+  /*padding-right: 250px;*/
+  color: white;
+  /*border: 100px;*/
+  
+}
+
+#amuri > p {
+  width: 302px;
+  height: 100px;
+  margin-left: 74px;
+  padding: 4px 7px;
+  border: 2px solid;
+  text-align: justify;
+  
+ 
+}
+#jeferson > p {
+  width: 302px;
+  height: 100px;
+  margin-left: -57px;
+  padding: 4px 7px;
+  border: 2px solid;
+  text-align: justify;
+  
+  
+}
+#joao > p {
+  width: 302px;
+  height: 100px;
+  margin-right: 72px;
+  padding: 4px 7px;
+  border: 2px solid;
+  text-align: justify;
+  
 }
 
 a {
