--- a/RELATÓRIOS E SPRINTS/SPRINT 2 HTML E CSS/sobre/style.css
+++ b/RELATÓRIOS E SPRINTS/SPRINT 2 HTML E CSS/sobre/style.css
@@ -16,14 +16,6 @@
   text-align: right;
 }
 
-.foto-startup {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 40px;
-  padding-top: 20px;
-  
-}
-
 .logo {
   margin: 0px;
   position: absolute;
@@ -39,20 +31,44 @@ h1 {
   text-align: left;
 }
 
-div.text{
-  /*margin: 0px 10px;*/
-  text-indent: 2.5em;
-}
-
-div.text h2{
+h2{
   text-decoration: rgb(19, 19, 32);
   margin: 10px 0px;
-  font-size: 20px;
+  font-size: 25px;
+  text-indent: 4em;
 }
-/*p.ident {
-  text-indent: 5ch;
-  border: 0px;
-}*/
+
+div.text{
+  margin: 0px 55px 0px 60px;
+  text-indent: 2.5em;
+  font-size: 18px;
+  text-indent: 2em;
+}
+
+.foto-startup {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 40px;
+  margin-left: 30px;
+  margin-right: 30px;
+  padding-top: 20px; 
+}
+
+.img1 {
+  margin-right: 15px;
+  border: 3px solid burlywood;
+}
+
+.img2 {
+  margin-right: 15px;
+  border: 3px solid burlywood;
+}
+
+.img3 {
+  margin-right: 15px;
+  border: 3px solid burlywood;
+}
+
 span {
   color: rgb(75, 75, 173);
 }
@@ -66,75 +82,76 @@ section > div#img-equipe {
   display: flex;
   justify-content: center;
   margin-top: 130px;
-  /*border-style: hidden;*/
   border: 10vw;
-  
- 
 }
 #logo {
   width: 1349px;
 }
+
 section#logo {
   display: inline-block;
-  /*padding: 5px;*/
   background-image: url('./imagem_equipe/logomarca.jpeg');
   height: 600px;
   background-repeat: no-repeat;
   background-position: center;
   background-color: #33283f;
-  /*background-size: cover;*/
   background-attachment: fixed;
 }
 
 .foto-amauri {
-  border: 10px;
-  padding-right: 150px;
+  border: 3px solid blue;
+  margin-right: 150px;
+  height: 306px;
 }
+
 .foto-jeferson {
-  border: 10px;
-  padding-right: 150px;
+  border: 3px solid blue;
+  margin-right: 150px;
+  height: 306px;
 }
+
 .foto-joao {
-  border: 10px;
+  border: 3px solid blue;
+  height: 306px;
 }
 
 .descricao {
   display: flex;
   justify-content: space-between;
-  /*padding-right: 250px;*/
   color: white;
-  /*border: 100px;*/
-  
 }
 
 #amuri > p {
-  width: 302px;
+  width: 307px;
   height: 100px;
-  margin-left: 74px;
+  margin: 10px 0px 0px 65px;
   padding: 4px 7px;
-  border: 2px solid;
+  /*border: 1px solid blue;*/
   text-align: justify;
-  
- 
+  color: white;
+  background-image: linear-gradient();
 }
+
 #jeferson > p {
-  width: 302px;
-  height: 100px;
-  margin-left: -57px;
+  width: 307px;
+  height: 80px;
+  margin: 10px 0px 0px 5px;
   padding: 4px 7px;
-  border: 2px solid;
+  /*border: 1px solid blue;*/
   text-align: justify;
-  
-  
+  color: white;
+  background-color: black;
 }
+
 #joao > p {
-  width: 302px;
+  width: 304px;
   height: 100px;
-  margin-right: 72px;
+  margin: 10px 65px 0px 0px;
   padding: 4px 7px;
-  border: 2px solid;
+  /*border: 1px solid blue;*/
   text-align: justify;
-  
+  color: white;
+  background-image: linear-gradient();
 }
 
 a {
@@ -143,10 +160,6 @@ a {
   font-weight: bold;
   color: white;
 }
-
-/*.post p {
-  margin: 10px 0px;
-}*/
 
 .menu,
 .logo {
