--- a/RELATÓRIOS E SPRINTS/SPRINT 2 HTML E CSS/artigos/artigos.css
+++ b/RELATÓRIOS E SPRINTS/SPRINT 2 HTML E CSS/artigos/artigos.css
@@ -119,6 +119,7 @@ a {
     border-radius: 5px;
     background: white;
     position: relative;
+    align-items: start;
 }
 
 .content .main-content .post .read-more {
@@ -138,8 +139,8 @@ a {
 }
 
 .content .main-content .post .post-image {
-    width: 40%;
-    height: 100%;
+    width: 100%;
+    height: 50%;
     float: left;
 }
 
