--- a/RELATÓRIOS E SPRINTS/SPRINT 2 HTML E CSS/artigos/artigos.css
+++ b/RELATÓRIOS E SPRINTS/SPRINT 2 HTML E CSS/artigos/artigos.css
@@ -1,183 +1,227 @@
 * {
-  margin: 0px;
-  padding: 0px;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
   }
-
-body{
-  font-family: "poppins", sans-serif;
-  background-color: beige;
+  
+  body {
+    font-family: "Poppins", sans-serif;
+    background-color: beige;
   }
-.branco {
-  color: #fff;
+  
+  .branco {
+    color: #fff;
+    font-weight: bold black;
+    
   }
-
-header {
-  background-color: #102739;
+  
+  header {
+    background-color: #102739;
   }
-
-nav {
-  display: flex;
-  justify-content: space-between;
-  border: 1px solid black;
+  
+  nav {
+    display: flex;
+    justify-content: space-between; /* mod */
+    align-items: center;
+    border: 1px solid black;
   }
-
-.logo {
-  display: flex;
-  margin: 1px 40px;
+  
+  .logo {
+    display: flex;
+    align-items: center;
+    margin: 1px 40px;
   }
-
-.logo p{
-  font-size: 20px;
-  color: black;
-  margin-top: 20px;
-  margin-left: 10px;
-  align-items: center;
-  font-family: "poppins", sans-serif;
+  
+  .logo p {
+    font-size: 20px;
+    color: rgb(0, 0, 0);
+    font-weight: bold;
+    margin-left: 10px;
+    font-weight: bold;
   }
-
-.logo img{
-  height: 70px;
-  width: 70px;
+  
+  .logo img {
+    height: 70px;
+    width: 70px;
   }
-
-.menu {
-  color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 1rem;
-  list-style: none;
-  padding: 1rem;
-  margin: 1px 40px;
+  
+  .hamburger {
+    display: none;
+    font-size: 30px;
+    cursor: pointer;
+    margin-right: 40px;
   }
-
-.menu a,
-.menu a:visited {
-  text-align: center;
-  font-weight: bold;
-  color: white;
-  text-decoration: none;
-  padding: 4px 12px;
+  
+  .menu {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    list-style: none;
+    padding: 1rem;
+    margin: 1px 40px;
   }
-
-.menu a:hover {
-  background-color: white;
-  color: #102739;
-  }
-
-
-body {
-    padding: 0px;
-    margin: 0px;
-    background: #f6f6f6;
-    font-family: sans-serif;
-}
-
-a {
+  
+  .menu a {
+    text-align: center;
+    font-weight: bold;
+    color: white;
     text-decoration: none;
-    color: inherit;
-}
-
-
-
-.btn {
-    padding: .5re, 1rem;
-    background: #006669;
-    color: white;
-    border: 1px solid transparent;
-    border-radius: .25rem;
-}
-
-.btn:hover {
-    color: white !important;
-    background: #005255;
-}
-
-.content {
-    width: 90%;
-    margin: 30px auto;
-}
-
-.content .main-content {
-    width: 70%;
-    float: left;
-}
-
-.clearfix::after {
-    content: '';
-    display: block;
-    clear: both;
-}
-
-.content .main-content .post {
-    width: 95%;
-    height: 270px;
-    margin: 20px auto;
-    border-radius: 5px;
-    background: white;
-    position: relative;
-    align-items: start;
-}
-
-.content .main-content .post .read-more {
-    position: absolute;
-    bottom: 10px;
-    right: 10px;
-    border: 1px solid #005255;
-    background: transparent;
-    border-radius: 0px;
-    color: #005255 !important;
-}
-
-.content .main-content .post .read-more:hover {
-    background: #006669;
-    color: white !important;
-    transition: .25s;
-}
-
-.content .main-content .post .post-image {
-    width: 100%;
-    height: 50%;
-    float: left;
-}
-
-.content .main-content .post .post-preview {
-    width: 60%;
-    padding: 10px;
-    float: right;
-}
-
-.content .main-content .recent-post-title {
-    margin: 20px;
-}
-
-.content .sidebar {
-    width: 30%;
-    float: left;
-    border: 1px dashed green;
-    height: 300px;
-}
-
-
-p {
-    text-align: left;
-  
+    padding: 4px 12px;
+    margin-top: 100px;
   }
   
-
-  .footer {
- 
-    clear: both;
-    width: 100%;
-    background-color:  #102739;
-    padding: 8px;
-    text-align: center;
-    border: 1px solid  black;
+  .menu a:hover {
+    background-color: white;
+    color: #102739;
+  }
+  
+  @media (max-width: 1020px) { /* escolhi esse tamanho para que o menu não fique 
+    com as palavras escritas uma a baixo da outra. Amauri Jr*/
+    .menu {
+      margin: auto;
+      display: none;
+      flex-direction: column;
+      background-color: #102739;
+      position: absolute;
+      top: 60px;
+      right: 0;
+      width: 100%;
+      text-align: center;
     }
   
-  .footer p {
-    color: white;
-    text-align: center;
-    padding: 15px;
+    .menu.active {
+      display: flex;
+      background-color:#102739;
+      opacity: 0.6;
+      display: flex;
+      width: 100%;
+      height: auto; /* resolvi o problema de os itens do menu ativo ficarem em cima da barra do cabeçalho. Amauri Jr*/
+      position: absolute;
+      z-index: 10; /* para deixar o menu por cima/ na frente do carrossel
+       deixei o index maior que o index do carrossel. Amauri Jr */
+      margin: 0;
+      margin-top: 14px; /* para que o menu fique junto com a barra do cabeçalho sem espaços. Amauri Jr*/
+      padding:2;
+      box-sizing: border-box;
+      justify-content: center;
+      align-items: center ;
+    /* centralizei o menu hambuguer quando ativado deixei ele com transparencia para ficar harmoniozo com orestante da página. Amauri Jr*/
+  }
+  
+    .hamburger {
+      display: block;
+      color: white;
     }
+  }
+  
+  /*
+  
+  a {
+      text-decoration: none;
+      color: inherit;
+  }*/
+  
+  
+  
+  .btn {
+      padding: .5re, 1rem;
+      background: #006669;
+      color: white;
+      border: 1px solid transparent;
+      border-radius: .25rem;
+  }
+  
+  .btn:hover {
+      color: white !important;
+      background: #005255;
+  }
+  
+  .content {
+      width: 90%;
+      margin: 30px auto;
+  }
+  
+  .content .main-content {
+      width: 70%;
+      float: left;
+  }
+  
+  .clearfix::after {
+      content: '';
+      display: block;
+      clear: both;
+  }
+  
+  .content .main-content .post {
+      width: 95%;
+      height: 270px;
+      margin: 20px auto;
+      border-radius: 5px;
+      background: white;
+      position: relative;
+      align-items: start;
+  }
+  
+  .content .main-content .post .read-more {
+      position: absolute;
+      bottom: 10px;
+      right: 10px;
+      border: 1px solid #005255;
+      background: transparent;
+      border-radius: 0px;
+      color: #005255 !important;
+  }
+  
+  .content .main-content .post .read-more:hover {
+      background: #006669;
+      color: white !important;
+      transition: .25s;
+  }
+  
+  .content .main-content .post .post-image {
+      width: 100%;
+      height: 50%;
+      float: left;
+  }
+  
+  .content .main-content .post .post-preview {
+      width: 60%;
+      padding: 10px;
+      float: right;
+  }
+  
+  .content .main-content .recent-post-title {
+      margin: 20px;
+  }
+  
+  .content .sidebar {
+      width: 30%;
+      float: left;
+      border: 1px dashed green;
+      height: 300px;
+  }
+  
+  
+  p {
+      text-align: left;
+    
+    }
+    
+  
+    .footer {
+   
+      clear: both;
+      width: 100%;
+      background-color:  #102739;
+      padding: 8px;
+      text-align: center;
+      border: 1px solid  black;
+      }
+    
+    .footer p {
+      color: white;
+      text-align: center;
+      padding: 15px;
+      }
+  
