--- a/RELATÓRIOS E SPRINTS/SPRINT 2 HTML E CSS/newsletter/newsletter.css
+++ b/RELATÓRIOS E SPRINTS/SPRINT 2 HTML E CSS/newsletter/newsletter.css
@@ -1,51 +1,57 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@700&family=Poppins:wght@400;500;600&display=swap');
-
 * {
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
-  }
+}
 
-body{
-  font-family: "poppins", sans-serif;
+body {
+  font-family: "Poppins", sans-serif;
   background-color: beige;
-  }
+}
+
 .branco {
   color: #fff;
-  }
+  font-weight: bold black;
+}
 
 header {
   background-color: #102739;
-  }
+}
 
 nav {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   border: 1px solid black;
-  }
+}
 
 .logo {
   display: flex;
-  margin: 1px 40px;
-  }
-
-.logo p{
-  font-size: 20px;
-  color: black;
-  margin-top: 20px;
-  margin-left: 10px;
   align-items: center;
-  font-family: "poppins", sans-serif;
-  }
+  margin: 1px 40px;
+}
 
-.logo img{
+.logo p {
+  font-size: 20px;
+  color: rgb(0, 0, 0);
+  font-weight: bold;
+  margin-left: 10px;
+  font-weight: bold;
+}
+
+.logo img {
   height: 70px;
   width: 70px;
-  }
+}
+
+.hamburger {
+  display: none;
+  font-size: 30px;
+  cursor: pointer;
+  margin-right: 40px;
+}
 
 .menu {
-  color: white;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -53,76 +59,110 @@ nav {
   list-style: none;
   padding: 1rem;
   margin: 1px 40px;
-  }
+}
 
-.menu a,
-.menu a:visited {
+.menu a {
   text-align: center;
   font-weight: bold;
   color: white;
   text-decoration: none;
   padding: 4px 12px;
-  }
+  margin-top: 100px;
+}
 
 .menu a:hover {
   background-color: white;
   color: #102739;
+}
+
+@media (max-width: 1020px) { /* escolhi esse tamanho para que o menu não fique 
+  com as palavras escritas uma a baixo da outra. Amauri Jr*/
+  .menu {
+    display: none;
+    flex-direction: column;
+    background-color: #102739;
+    position: absolute;
+    top: 60px;
+    right: 0;
+    width: 100%;
+    text-align: center;
   }
 
-body {
-  margin: 0;
-  padding: 0;
- 
-  height: 100vh;
-  overflow: hidden;
+  .menu.active {
+    display: flex;
+    background-color:#102739;
+    opacity: 0.6;
+    display: flex;
+    width: 100%;
+    height: auto; /* resolvi o problema de os itens do menu ativo ficarem em cima da barra do cabeçalho. Amauri Jr*/
+    position: absolute;
+    z-index: 10; /* para deixar o menu por cima/ na frente do carrossel
+     deixei o index maior que o index do carrossel. Amauri Jr */
+    margin: 0;
+    margin-top: 14px; /* para que o menu fique junto com a barra do cabeçalho sem espaços. Amauri Jr*/
+    padding:2;
+    box-sizing: border-box;
+    justify-content: center;
+    align-items: center ;
+  /* centralizei o menu hambuguer quando ativado deixei ele com transparencia para ficar harmoniozo com orestante da página. Amauri Jr*/
+}
+  
+
+  .hamburger {
+    display: block;
+    color: white;
+  }
+}
+
+
+.content {
+  display: flex;
+  flex: 1;
+  justify-content: center;
+  align-items: center;
+  padding: 20px 0;
 }
 
 .center {
-  position: relative;;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   width: 400px;
-  height: 530px;
+  height: 600px;
   background: #102739;
-  border-radius: 10px;
   box-shadow: 10px 10px 15px rgba(0,0,0,0.05);
+  padding: 20px;
+  margin:200px; /* centralizei o forms para que nãofique por junto com o 
+  menu hamburguer ativo. Amauri Jr*/
+  text-align: center;
+  color: white;
 }
 
 .center .imagem {
-    display: flex;
-    justify-content: center;
-    padding: 13px;
+  margin-top: 20px;
 }
 
 .center h2 {
   font-size: 20px;
-  text-align: center;
-  padding: 13px 0;
+  margin: 20px 0;
   border-bottom: 1px solid silver;
-  color: white;
 }
 
 .center form {
   padding: 0 40px;
-  box-sizing: border-box;
-  color: white;
 }
 
 form .txt_field {
   position: relative;
-  border-bottom: 2px solid #adadad;
   margin: 30px 0;
 }
 
 .txt_field input {
   width: 100%;
-  padding: 0 5px;
-  height: 40px;
+  padding: 10px;
   font-size: 16px;
   border: none;
   background: none;
   outline: none;
+  color: white;
+  border-bottom: 2px solid #adadad;
 }
 
 .txt_field label {
@@ -136,6 +176,12 @@ form .txt_field {
   transition: .5s;
 }
 
+.txt_field input:focus ~ label,
+.txt_field input:valid ~ label {
+  top: -5px;
+  color: white;
+}
+
 .txt_field span::before {
   content: '';
   position: absolute;
@@ -147,63 +193,44 @@ form .txt_field {
   transition: .5s;
 }
 
-.txt_field input:focus ~ label,
-.txt_field input:valid ~ label {
-  top: -5px;
-  color: #102739;
-}
-
 .txt_field input:focus ~ span::before,
-.txt_field input:valid ~ span::before{
+.txt_field input:valid ~ span::before {
   width: 100%;
-  
 }
 
-.center .checkbox {
-    display: flex;
-    justify-content: space-between;
-    font-size: 14.5px;
-    margin: -15px 0 15px;
+.checkbox {
+  display: flex;
+  align-items: center;
+  margin: 15px 0;
 }
 
-.checkbox label input {
-    margin-right: 10px;
-    
+.checkbox label {
+  font-size: 14.5px;
+}
+
+.checkbox input {
+  margin-right: 10px;
 }
 
 input[type="submit"] {
   width: 100%;
   height: 50px;
-  border: 1px solid;
+  border: none;
   background: white;
   border-radius: 25px;
   font-size: 18px;
   color: #102739;
   font-weight: 700;
   cursor: pointer;
-  outline: none;
 }
 
 input[type="submit"]:hover {
-  border-color: #535252;
-  transition: .5s;
-  box-shadow: 2px 2px 2px 2px #535252;
+  background: #e1e1e1;
 }
 
-.footer { /* o footer não esta aparecendo e não identifiquei o que está impedindo, mas como na página só tem o formulário,
-   acredito que deva ser alguma teg dele que esta impedindo que ele apareça. ps: Amauri Jr */
- 
-  clear: both;
-  width: 100%;
-  background-color:  #102739;
+.footer {
+  background-color: #102739;
   padding: 8px;
   text-align: center;
-  border: 1px solid  black;
-  }
-
-.footer p {
   color: white;
-  text-align: center;
-  padding: 15px;
-  }
-
+}
