--- a/RELATÓRIOS E SPRINTS/SPRINT 2 HTML E CSS/sobre/sobre.css
+++ b/RELATÓRIOS E SPRINTS/SPRINT 2 HTML E CSS/sobre/sobre.css
@@ -1,49 +1,57 @@
-@charset "UTF-8";
 * {
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
-  }
+}
 
-body{
-  font-family: "poppins", sans-serif;
+body {
+  font-family: "Poppins", sans-serif;
   background-color: beige;
-  }
+}
+
 .branco {
   color: #fff;
-  }
+  font-weight: bold black;
+}
 
 header {
   background-color: #102739;
-  }
+}
 
 nav {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   border: 1px solid black;
-  }
+}
 
 .logo {
   display: flex;
-  margin: 1px 40px;
-  }
-
-.logo p{
-  font-size: 20px;
-  color: black;
-  margin-top: 20px;
-  margin-left: 10px;
   align-items: center;
-  font-family: "poppins", sans-serif;
-  }
+  margin: 1px 40px;
+}
 
-.logo img{
+.logo p {
+  font-size: 20px;
+  color: rgb(0, 0, 0);
+  font-weight: bold;
+  margin-left: 10px;
+  font-weight: bold;
+}
+
+.logo img {
   height: 70px;
   width: 70px;
-  }
+}
+
+.hamburger {
+  display: none;
+  font-size: 30px;
+  cursor: pointer;
+  margin-right: 40px;
+}
 
 .menu {
-  color: white;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -51,21 +59,61 @@ nav {
   list-style: none;
   padding: 1rem;
   margin: 1px 40px;
-  }
+}
 
-.menu a,
-.menu a:visited {
+.menu a {
   text-align: center;
   font-weight: bold;
   color: white;
   text-decoration: none;
   padding: 4px 12px;
-  }
+  margin-top: 100px;
+}
 
 .menu a:hover {
   background-color: white;
   color: #102739;
+}
+
+@media (max-width: 1020px) { /* escolhi esse tamanho para que o menu não fique 
+  com as palavras escritas uma a baixo da outra. Amauri Jr*/
+  .menu {
+    display: none;
+    flex-direction: column;
+    background-color: #102739;
+    position: absolute;
+    top: 60px;
+    right: 0;
+    width: 100%;
+    text-align: center;
   }
+
+  .menu.active {
+    display: flex;
+    background-color:#102739;
+    opacity: 0.6;
+    display: flex;
+    width: 100%;
+    height: auto; /* resolvi o problema de os itens do menu ativo ficarem em cima da barra do cabeçalho. Amauri Jr*/
+    position: absolute;
+    z-index: 10; /* para deixar o menu por cima/ na frente do carrossel
+     deixei o index maior que o index do carrossel. Amauri Jr */
+    margin: 0;
+    margin-top: 14px; /* para que o menu fique junto com a barra do cabeçalho sem espaços. Amauri Jr*/
+    padding:2;
+    box-sizing: border-box;
+    justify-content: center;
+    align-items: center ;
+  /* centralizei o menu hambuguer quando ativado deixei ele com transparencia para ficar harmoniozo com orestante da página. Amauri Jr*/
+}
+  
+
+  .hamburger {
+    display: block;
+    color: white;
+  }
+}
+
 
 h1 {
   margin: 0px;
